<resources>
    <string name="title_activity_category_list">dawnsqrl_wyanmei Budget Tracker</string>
    <string name="title_activity_transaction_list">All Transactions</string>
    <string name="title_dialog_add">Add Transaction</string>
    <string name="button_clear">Clear Data</string>
    <string name="button_income">Income item (appears as negative)</string>
    <string name="button_transaction">Transactions</string>
    <string name="button_add">Add</string>
    <string name="button_cancel">Cancel</string>
    <string name="button_yes">Yes</string>
    <string name="text_category">Category</string>
    <string name="text_name">Name</string>
    <string name="text_cost">Cost (unit: $)</string>
    <string name="warning_one">WARNING</string>
    <string name="warning_two">Are you sure you want to delete all transactions?</string>
    <string name="warning_three">They will be lost forever! (A long time!)</string>
    <string name="warning_four">You may press and hold to delete single items in the TRANSACTIONS list.</string>
    <string name="hint_delete">Press and hold in the TRANSACTIONS list to delete single items.</string>
    <string name="text_error_category">Enter a category</string>
    <string name="text_error_name">Enter a name</string>
    <string name="text_error_cost_empty">Enter a cost</string>
    <string name="text_error_cost_format">Enter a valid cost</string>
    <string name="toast_dark_mode_one">This app supports dark mode.\nProtect your eyes!</string>
    <string name="toast_dark_mode_two">This startup message will no longer display if you switch to dark mode.</string>
</resources>