<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingLeft="4dp"
    android:paddingTop="16dp"
    android:paddingRight="4dp"
    android:paddingBottom="4dp">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/categoryInputLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="4dp"
        app:boxBackgroundColor="@color/invisible"
        app:boxStrokeColor="@color/highlight"
        app:boxStrokeErrorColor="@color/warning"
        app:counterOverflowTextColor="@color/warning"
        app:errorEnabled="true"
        app:errorTextColor="@color/warning"
        app:hintTextColor="@color/highlight">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/categoryInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:hint="@string/text_category"
            android:inputType="textCapWords"
            android:textColor="?android:textColorPrimary" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/titleInputLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="4dp"
        app:boxBackgroundColor="@color/invisible"
        app:boxStrokeColor="@color/highlight"
        app:boxStrokeErrorColor="@color/warning"
        app:counterOverflowTextColor="@color/warning"
        app:errorEnabled="true"
        app:errorTextColor="@color/warning"
        app:hintTextColor="@color/highlight">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/nameInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:hint="@string/text_name"
            android:inputType="textCapWords"
            android:textColor="?android:textColorPrimary" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/costInputLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:boxBackgroundColor="@color/invisible"
        app:boxStrokeColor="@color/highlight"
        app:boxStrokeErrorColor="@color/warning"
        app:counterOverflowTextColor="@color/warning"
        app:errorEnabled="true"
        app:errorTextColor="@color/warning"
        app:hintTextColor="@color/highlight">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/costInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:hint="@string/text_cost"
            android:inputType="number"
            android:textColor="?android:textColorPrimary" />
    </com.google.android.material.textfield.TextInputLayout>
</LinearLayout>